Apply app's default theme on printing activity

--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -503,8 +503,7 @@
         </activity>
         <activity
             android:name="org.commcare.print.TemplatePrinterActivity"
-            android:exported="true"
-            android:theme="@style/Theme.Dialog.NoTitle">
+            android:exported="true">
             <intent-filter>
                 <action android:name="org.commcare.dalvik.action.PRINT"/>
 
