--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -427,9 +427,9 @@
         </receiver>
 
         <receiver
-            android:exported="true"
             android:name="org.commcare.provider.CommCareLogoutReceiver"
-            android:permission="org.commcare.dalvik.permission.COMMCARE_LOGOUT">
+            android:permission="org.commcare.dalvik.permission.COMMCARE_LOGOUT"
+            android:exported="true">
             <intent-filter>
                 <action android:name="org.commcare.dalvik.api.action.CommCareLogoutAction"/>
                 <category android:name="android.intent.category.DEFAULT"/>
